# MCPstudio

./: .gitignore  CLAUDE.md  EXPERIMENT.md  README.md  SECURITY.md  package.json
backend/: setup-mcp-backend.sh
backend/mcp_studio_backend/: .env.example  README.md  pyproject.toml
backend/mcp_studio_backend/src/mcp_studio/: container.py  main.py
backend/mcp_studio_backend/src/mcp_studio/api/: deps.py
backend/mcp_studio_backend/src/mcp_studio/api/controllers/: auth_controller.py  discovery_controller.py  execution_controller.py  server_controller.py  tool_controller.py
backend/mcp_studio_backend/src/mcp_studio/api/routes/: auth_routes.py  discovery_routes.py  execution_routes.py  server_routes.py  tool_routes.py
backend/mcp_studio_backend/src/mcp_studio/api/schemas/: auth_schema.py  discovery_schema.py  execution_schema.py  server_schema.py  tool_schema.py
backend/mcp_studio_backend/src/mcp_studio/api/websocket/: server_status.py  tool_execution.py
backend/mcp_studio_backend/src/mcp_studio/application/services/: auth_service.py  discovery_service.py  execution_service.py  server_service.py  tool_service.py
backend/mcp_studio_backend/src/mcp_studio/config/: settings.py
backend/mcp_studio_backend/src/mcp_studio/domain/models/: execution_result.py  server.py  tool.py
backend/mcp_studio_backend/src/mcp_studio/domain/repositories/: execution_repository.py  server_repository.py  tool_repository.py
backend/mcp_studio_backend/src/mcp_studio/domain/services/: mcp_protocol_service.py
backend/mcp_studio_backend/tests/unit/: test_google_drive.py
(+127 files in other folders)
